storj/templates/minio-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: minio-route
  namespace: storj
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /minio
            pathType: Prefix
            backend:
              service:
                name: storj-s3-gateway
                port:
                  name: http
    - host: minio.mars.stargate
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: storj-s3-gateway
                port:
                  name: http
